;; dune file
(library
   (name OidcProviderTest)
   (public_name oidc-provider-test.lib)
   ; the linkall flag ensures that all of our tests are compiled and the
   ; -g flag emits debugging information
   (ocamlopt_flags -linkall -g)
   ; you will want to depend on the library you are testing as well, however for
   ; the purposes of this example we are only depending on the test runner itself
   (libraries
    rely.lib
    nocrypto
    nocrypto.unix
    jwt
    containers

    oidc
    http
   )
   (modules (:standard \ RunTests))
)
(test
  ; the for the library is automatically detected because of the name, but we
  ; need to explicitly specify the package here
  (package oidc-provider-test)
  (name RunTests)
  ; (public_name RunTests.exe)
  (libraries
    oidc-provider-test.lib
  )
  (modules RunTests)
)

(env
  (windows (flags (:standard -g -ccopt -lbcrypt))))